# q-space

./: .gitignore  Cargo.toml  Dockerfile  README.md  packages.txt  q.sh  requirements.txt  setup.py
src/: main.rs  q.py  q.sh
